--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">RemindMe</string>
     <string name="search">Search</string>
     <string name="menu_item_notification">Напоминания</string>
+
+
+
+
+    <string name="open_msg">Open</string>
+    <string name="close_msg">Close</string>
 </resources>
