--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
 
     <string name="open_msg">Open</string>
     <string name="close_msg">Close</string>
+    <string name="tab_item_history">HISTORY</string>
+    <string name="tab_item_ideas">IDEAS</string>
+    <string name="tab_item_todo">TODO</string>
+    <string name="tab_item_birthdays">BIRTHDAYS</string>
+
+
+
 </resources>
